src/objects/csord__Service_Line_Item__c.object
<CustomObject>
    <description>A billable component of a Service.</description>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; LG_BillingAccount__r.Id,LG_BillingAccount__r.LG_BillingAccountNumber__c,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Sync_with_Billing__c</fullName>
        <label>Do Not Sync with Billing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Action__c</fullName>
        <formula>IF(ISBLANK( TEXT(csordtelcoa__Delta_Status__c) ), &apos;Add&apos;, CASE(TEXT(csordtelcoa__Delta_Status__c), &apos;Added&apos;, &apos;Add&apos;, &apos;Deleted&apos;, &apos;Delete&apos;, &apos;Price Change&apos;, &apos;Change&apos;, &apos;Name Change&apos;, &apos;Change&apos;, &apos;Price And Name Change&apos;, &apos;Change&apos;, &apos;Unchanged&apos;, &apos;None&apos;, &apos;Unknown&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AddOnType__c</fullName>
        <label>Add On Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SLA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_BillingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Service line Items</relationshipLabel>
        <relationshipName>Service_line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_BillingProductId__c</fullName>
        <label>LG Billing Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Commitment__c</fullName>
        <label>Commitment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ContractId__c</fullName>
        <label>Contract ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ExternalDescription__c</fullName>
        <label>External Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ExternalPriceName__c</fullName>
        <label>External Price Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ExternalServiceName__c</fullName>
        <label>LG_ExternalServiceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_IsPenaltyFee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Penalty Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Quantity__c</fullName>
        <label>Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServiceLineItemExternalId__c</fullName>
        <label>Service Line Item External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ToBeSent__c</fullName>
        <label>To Be Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Add On</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_BillingProductId__c</fullName>
        <label>Billing Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_ContractId__c</fullName>
        <label>Contract Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_DeactivationReason__c</fullName>
        <label>Deactivation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_DiscountEndDate__c</fullName>
        <formula>IF(VALUE(UM_Duration__c)= 0,null,
DATE(
year(csord__Service__r.csord__Activation_Date__c) + floor((month(csord__Service__r.csord__Activation_Date__c) + VALUE(UM_Duration__c)- 1)/12)
,
if( mod( month(csord__Service__r.csord__Activation_Date__c) + VALUE(UM_Duration__c), 12 ) = 0, 12 , mod( month(csord__Service__r.csord__Activation_Date__c) + VALUE(UM_Duration__c), 12 ))
,
min(
day(csord__Service__r.csord__Activation_Date__c),
case(
max( mod( month(csord__Service__r.csord__Activation_Date__c) + VALUE(UM_Duration__c), 12 ) , 1),
9,30,
4,30,
6,30,
11,30,
2,28,
31
)
)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UM_Duration__c</fullName>
        <label>Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_KenanServiceLineId__c</fullName>
        <externalId>true</externalId>
        <label>KenanServiceLineId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_NumberOfUnits__c</fullName>
        <label>Number Of Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_OneOffPriceDiscount__c</fullName>
        <label>One Off Price Discount (%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Price_Override__c</fullName>
        <label>Price Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_RecurringPriceDiscount__c</fullName>
        <label>Recurring Price Discount (%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_ServiceItemType__c</fullName>
        <label>Service Item Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_ServiceStatus__c</fullName>
        <label>Service Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready For Billing</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Termination Requested</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_Service_Kenan_Id__c</fullName>
        <formula>csord__Service__r.LG_ServiceExternalId__c</formula>
        <label>Service Kenan Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_UnitPack__c</fullName>
        <label>Unit Pack</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_UnitType__c</fullName>
        <label>Unit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Discount_Type__c</fullName>
        <description>What type of discount to apply. The value of this field determines whether the Discount Amount or Discount Percentage value is used.</description>
        <inlineHelpText>Type of the discount applied.</inlineHelpText>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                    <default>true</default>
                    <label>Percentage</label>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csord__Discount_Value__c</fullName>
        <description>The value of the discount. The value in interpreted either as an amount or a percentage, depending on the Discount Type field.</description>
        <inlineHelpText>Depending on the Discount Type field either a percentage or an amount.</inlineHelpText>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csord__Discounted_Amount__c</fullName>
        <description>Discounted amount value</description>
        <label>Discounted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csord__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__External_Identifier2__c</fullName>
        <description>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</inlineHelpText>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csord__External_Identifier__c</fullName>
        <description>DEPRECATED. External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>DEPRECATED. Use External Identifier2 field instead.</inlineHelpText>
        <label>DEPRECATED External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Identification__c</fullName>
        <description>Identification string for the object, used as the reference from external systems.</description>
        <inlineHelpText>E.g. &quot;spokeServiceAmsterdam&quot; in Hub&amp;Spokes scenario.</inlineHelpText>
        <label>Identification</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Denotes if the item is active</description>
        <inlineHelpText>Denotes if the item is active</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csord__Is_Adhoc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies the Service Line Item as an Adhoc Line Item. Default value of &quot;false&quot;/&quot;unchecked&quot; represents a normal Service Line Item.</description>
        <inlineHelpText>Identifies the Service Line Item as an Adhoc Line Item. Default value of &quot;false&quot;/&quot;unchecked&quot; represents a normal Service Line Item.</inlineHelpText>
        <label>Is Adhoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csord__Is_Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this line item is a recurring item.</description>
        <label>Is Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csord__Line_Description__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Line_Number__c</fullName>
        <displayFormat>OL{00000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>csord__Order_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Order Request object which introduced the latest changes to this object.</description>
        <inlineHelpText>Order Request object which introduced the latest changes to this object.</inlineHelpText>
        <label>Order Request</label>
        <referenceTo>csord__Order_Request__c</referenceTo>
        <relationshipLabel>Service line Items</relationshipLabel>
        <relationshipName>Service_line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Price_Before_Discount__c</fullName>
        <label>Price Before Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csord__Service__c</fullName>
        <description>The parent Service of this ServiceLineItem.</description>
        <inlineHelpText>The parent Service of this ServiceLineItem.</inlineHelpText>
        <label>Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Service line Items</relationshipLabel>
        <relationshipName>Service_line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>csord__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Delta_Status__c</fullName>
        <label>Delta Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Price Change</fullName>
                </value>
                <value>
                    <fullName>Unchanged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__Line_Item_Reference_Id__c</fullName>
        <label>Line Item Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Line Item</label>
    <listViews>
        <fullName>csord__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>